fixed some overflowing bugs

--- a/css/style.css
+++ b/css/style.css
@@ -1,31 +1,31 @@
 @font-face {
-  font-family: 'Source Sans 3';
+  font-family: "Source Sans 3";
   font-weight: 200 900;
   font-style: normal;
   font-stretch: normal;
-  src: url('SourceSans3VF-Roman.ttf.woff2') format('woff2');
+  src: url("SourceSans3VF-Roman.ttf.woff2") format("woff2");
 }
 
 @font-face {
-  font-family: 'Dosis';
+  font-family: "Dosis";
   font-weight: 200 900;
   font-style: normal;
   font-stretch: normal;
-  src: url('Dosis-VariableFont_wght.ttf') format('truetype');
+  src: url("Dosis-VariableFont_wght.ttf") format("truetype");
 }
 
 @font-face {
-  font-family: 'Spartan';
+  font-family: "Spartan";
   font-weight: 200 900;
   font-style: normal;
   font-stretch: normal;
-  src: url('Spartan-VariableFont_wght.ttf') format('truetype');
+  src: url("Spartan-VariableFont_wght.ttf") format("truetype");
 }
 
 @font-face {
-  font-family: 'Monserrat';
+  font-family: "Monserrat";
   font-weight: 400;
-  src: url('Montserrat-Medium.ttf')  format('truetype');
+  src: url("Montserrat-Medium.ttf") format("truetype");
 }
 
 .dark-bg {
@@ -38,7 +38,7 @@ html {
 }
 
 body {
-  font: 'Dosis', sans-serif;
+  font: "Dosis", sans-serif;
   background-color: #1b1b1e;
   width: 100%;
 }
@@ -51,11 +51,11 @@ body {
 }
 
 h1 {
-  font-family: 'Source Sans 3', 'Dosis', Arial, Helvetica, sans-serif;
+  font-family: "Source Sans 3", "Dosis", Arial, Helvetica, sans-serif;
 }
 
 .dark-bg .number {
-  font: 200 7rem 'Dosis', sans-serif;
+  font: 200 7rem "Dosis", sans-serif;
   color: #fff;
   opacity: 0.2;
 }
@@ -65,12 +65,12 @@ h1 {
 }
 
 .dark-bg h1 {
-  font: 400 5.6rem 'Spartan', sans-serif;
+  font: 400 5.6rem "Spartan", sans-serif;
   color: #fff;
 }
 
 .dark-bg p {
-  font: 400 1.2rem  'Source Sans 3', sans-serif;
+  font: 400 1.2rem "Source Sans 3", sans-serif;
   color: #fff;
 }
 
@@ -262,13 +262,13 @@ h2.project {
 div.right-centered {
   position: relative;
   width: calc(474 / 1440 * 100%);
-  left: calc(211 / 1440 * 100%);
+  left: calc(190 / 1440 * 100%);
 }
 
 div.squares {
   position: relative;
   width: 657px;
-  left: calc(169 / 1440 * 100%);
+  left: calc(145 / 1440 * 100%);
 }
 
 div.square {
@@ -310,12 +310,12 @@ div.square:nth-child(4) div.vector {
 
 div.about-info h4 {
   color: #fff;
-  font: 400 1.5rem 'Spartan', sans-serif;
+  font: 400 1.5rem "Spartan", sans-serif;
 }
 
 div.about-info ul li {
   color: #7d7c84;
-  font: 400 1.2rem 'Source Sans 3', sans-serif;
+  font: 400 1.2rem "Source Sans 3", sans-serif;
 }
 
 section.about-me {
@@ -340,13 +340,13 @@ div.back-tech div p {
   display: block;
   color: #ea6118;
   opacity: 1;
-  font: 400 1.2rem 'Source Sans 3', sans-serif;
+  font: 400 1.2rem "Source Sans 3", sans-serif;
   margin: 0;
   padding: 0 0.5rem;
 }
 
 p.project-description {
-  font: 400 1.2rem 'Source Sans 3', sans-serif;
+  font: 400 1.2rem "Source Sans 3", sans-serif;
   color: #fff;
   margin: 2rem;
 }
@@ -413,7 +413,7 @@ footer.dark-bg a.link-icon {
 
 footer h2 {
   color: #fff;
-  font: 400 2.5rem 'Source Sans 3', sans-serif;
+  font: 400 2.5rem "Source Sans 3", sans-serif;
   margin: 2.5rem 0 0 0;
 }
 
@@ -432,6 +432,7 @@ footer {
 
 #skills {
   order: 1;
+  height: min-content;
 }
 
 @media screen and (max-width: 1450px) {
@@ -484,12 +485,13 @@ footer {
     left: 0;
     margin: 0 5%;
     width: 100%;
+    width: fit-content;
   }
 }
 
 @media screen and (max-width: 1170px) {
   #skills {
-    width: fit-content;
+    width: 660px;
   }
 
   div.capstone {
@@ -530,7 +532,7 @@ footer {
   footer div.left-centered {
     left: 0;
     margin: 0 2.5%;
-    width: 100%;
+    width: fit-content;
   }
 
   div.square-decoration {
@@ -602,7 +604,7 @@ footer {
     left: 0;
     margin: 0 2.5%;
     padding-bottom: 10px;
-    width: 100%;
+    width: fit-content;
   }
 
   div.square-decoration {
@@ -613,11 +615,11 @@ footer {
   }
 
   div.about-info h4 {
-    font: 400 0.8rem 'Spartan', sans-serif;
+    font: 400 0.8rem "Spartan", sans-serif;
   }
 
   div.about-info ul li {
-    font: 400 0.6rem 'Source Sans 3', sans-serif;
+    font: 400 0.6rem "Source Sans 3", sans-serif;
   }
 
   div.vector {
@@ -629,11 +631,11 @@ footer {
   }
 
   .dark-bg p {
-    font: 400 0.6rem 'Source Sans 3', sans-serif;
+    font: 400 0.6rem "Source Sans 3", sans-serif;
   }
 
   .dark-bg h1 {
-    font: 400 2.8rem 'Spartan', sans-serif;
+    font: 400 2.8rem "Spartan", sans-serif;
   }
 
   a.link-icon {
@@ -662,7 +664,7 @@ footer {
   }
 
   .dark-bg .number {
-    font: 200 4.5rem 'Dosis', sans-serif;
+    font: 200 4.5rem "Dosis", sans-serif;
     color: #fff;
     opacity: 0.2;
   }
@@ -674,7 +676,7 @@ footer {
 
   footer h2 {
     color: #fff;
-    font: 400 1.25rem 'Source Sans 3', sans-serif;
+    font: 400 1.25rem "Source Sans 3", sans-serif;
     margin: 0.7rem 0 0 0;
   }
 
